<resources>
    <string name="app_name">queer_hack_2020_submission</string>

    <string name="image_title">Lawrence</string>
    <string name="sign_up_instead">Sign Up Instead</string>
    <string name="login">Log In</string>
    <string name="password_label">Password:</string>
    <string name="email">Email:</string>
    <string name="new_user_label">New User?</string>
    <string name="confirm_password_label">Confirm Password:</string>
    <string name="sign_up">Sign Up</string>
    <string name="old_user_label">Returning User?</string>
    <string name="sign_in_instead">Sign In Instead</string>
    <string name="logout">Log out</string>
    <string name="meal_question">Have you eaten three full meals today?</string>
    <string name="yes_message">YES</string>
    <string name="no_message">NO</string>
    <string name="feed">Feed!</string>
    <string name="play">Play!</string>
    <string name="go_to_shop">Go to shop</string>
    <string name="continue_str">Continue</string>
    <string name="description">description</string>
    <string name="choose_pet">Choose from one of these two pets:</string>
    <string name="bear">Bear</string>
    <string name="frog">frog</string>
    <string name="welcome">Welcome!</string>
    <string name="select_mood">Welcome! On a scale of 1 to 5, how are you feeling today?</string>

    <string-array name="moods">
        <item>5 - Very positive</item>
        <item>4 - Somewhat positive</item>
        <item>3 - Neutral</item>
        <item>2 - Somewhat negative</item>
        <item>1 - Very negative</item>
    </string-array>

</resources>