<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questiontextActivity"
    android:orientation="vertical"
    android:background="@color/peach">

    <TextView
        android:id="@+id/image_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:paddingTop="14dp"
        android:text="@string/choose_pet"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="124dp"
        android:layout_height="123dp"
        android:background="@null"
        android:src="@drawable/bear" />


    <ImageView
        android:layout_width="299dp"
        android:layout_height="177dp"
        android:background="@null"
        android:src="@drawable/froggo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/bear"
        tools:ignore="OnClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/frog" />
</LinearLayout>

