<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="225dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".StandardQuestionActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:text="@string/meal_question"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/yes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:onClick="yesClicked"
            android:text="@string/yes_message"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/no_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:onClick="noClicked"
            android:text="@string/no_message"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>